feat: Support Java 8